Prevent iframe scrollbars

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,4 +9,5 @@ iframe {
   height: 100%;
   position: absolute;
   border: none;
+  overflow: hidden;
 }
